objects/Postes_Suppl_mentaires__c.object
<CustomObject>
    <fields>
        <fullName>Compte__c</fullName>
        <label>Compte</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Postes_Suppl_mentaires</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Postes_Suppl_mentaires</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_de_d_but_du_poste__c</fullName>
        <label>Date de début du poste</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_fin_du_poste__c</fullName>
        <label>Date de fin du poste</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Professionnel__c</fullName>
        <label>Email Professionnel</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_direct__c</fullName>
        <label>Email direct</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Famille_Fonction__c</fullName>
        <label>Famille Fonction</label>
        <picklist>
            <picklistValues>
                <fullName>Autres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direction Générale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production/Achats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Etud/Recherche/Dévelop/Qualité</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ressources Humaines/Formation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing/Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial/Ventes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance/Gest./Adminis./Juridi.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organisation/Systèmes d&apos;Informations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enseignement/Education</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fax_direct__c</fullName>
        <label>Fax direct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fonction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fonction</label>
        <referenceTo>Fonction__c</referenceTo>
        <relationshipName>Fonction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fonction_exacte__c</fullName>
        <label>Fonction exacte</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fonctions__c</fullName>
        <label>Fonction codée</label>
        <picklist>
            <controllingField>Famille_Fonction__c</controllingField>
            <picklistValues>
                <fullName>Non Renseignée</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof Libérales &amp; Act.Diverses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>En Cours de Création d&apos;Entreprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volontariat International en Entreprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>En Cours de Formation Compl.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retraité(e)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congé Parental d&apos;Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Militaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profession Artistique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof Médicale/Pharmacie/Vétér.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Religieux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ministre/Député/Haut Fonction.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadre des Services Publics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exploitant Agricole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Journaliste</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contrôleur/Inspecteur Impôts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Syndic d&apos;Immeubles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hôtelier/Restaurateur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commerçant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agent(Général) d&apos;Assurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divers Etranger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direction Générale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrateur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Président(e)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vice-Président</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conseiller du Président</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Président du Directoire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Président Directeur Général</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directeur Général</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ID_FEG__c</fullName>
        <externalId>true</externalId>
        <label>ID FEG</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile_professionnel__c</fullName>
        <label>Mobile professionnel</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Parti_de_l_entreprise__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parti de l&apos;entreprise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R_mun_ration_annuelle_K__c</fullName>
        <label>Rémunération annuelle K€</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_mun_ration_annuelle_actuelle_en_K__c</fullName>
        <label>Rémunération annuelle actuelle en K€</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_l_phone_direct__c</fullName>
        <label>Téléphone direct</label>
        <type>Phone</type>
    </fields>
    <label>Historique poste et poste supplémentaire</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Compte__c</columns>
        <columns>Fonction__c</columns>
        <columns>Fonctions__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Nom de Postes Supplémentaires</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historique poste et poste supplémentaire</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>